spacing issue for search bar

--- a/resources/assets/scss/_misc.scss
+++ b/resources/assets/scss/_misc.scss
@@ -287,7 +287,7 @@
 	@media (min-width: 768px){
 		position: absolute;
     	right: 15px;
-    	top: 10px;
+    	top: 0;
 	}
     &.showSearch{
     	.custom-expand-search{
